[package]
name = "rust_tier"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
libp2p = { version = "0.54.1", features = [
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
] }
libp2p-stream = "0.2.0-alpha"
tokio = { version = "1.39.3", features = ["full"] }
rand = "0.8.5"
